Fixing navigation on mobile

--- a/CV/cover.css
+++ b/CV/cover.css
@@ -7,6 +7,9 @@ html,body{
     overflow-x: hidden; 
     overflow-y: auto;
 }
+.clickable:hover{
+  cursor: pointer;
+}
 #one{
   position: absolute; top: 0px; left: 0px;
   width: 100%; height: 100%;
@@ -44,6 +47,18 @@ ul {
 }
 #arrow-right{
   font-size: 30px;
+}
+#arrow-left{
+  font-size: 30px;
+}
+#arrow-left > li > a {
+  color: black;
+}
+#arrow-up{
+  font-size: 30px;
+}
+#arrow-up > li > a {
+  color: black;
 }
 #arrow-bottom{
   font-size: 30px;
